Loading and saving of xyzrgb pcd files working.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,17 +16,20 @@ add_definitions(${PCL_DEFINITIONS})
 set(project_SOURCES main.cpp pclobjectextractor.cpp)
 set(project_HEADERS pclobjectextractor.h)
 set(project_FORMS pclobjectextractor.ui)
+set(project_RESOURCES icon.qrc)
 set(VTK_LIBRARIES vtkRendering vtkGraphics vtkHybrid QVTK)
 
 QT4_WRAP_UI(project_FORMS_HEADERS ${project_FORMS})
 QT4_WRAP_CPP(project_HEADERS_MOC ${project_HEADERS})
+QT4_ADD_RESOURCES(RESOURCE_ADDED ${project_RESOURCES})
 
 include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
 
 ADD_EXECUTABLE(PCLObjectExtractor ${project_SOURCES}
                                   ${project_FORMS_HEADERS}
-                                  ${project_HEADERS_MOC})
+                                  ${project_HEADERS_MOC}
+                                  ${project_RESOURCES})
 
 TARGET_LINK_LIBRARIES(PCLObjectExtractor ${QT_LIBRARIES}
                                          ${PCL_LIBRARIES}
